--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Jingo",
   "license": "MIT",
   "devDependencies": {
+    "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.1",
     "esbuild": "^0.19.8",
     "esbuild-node-externals": "^1.11.0",
