--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.1",
+    "@types/nunjucks": "^3.2.6",
     "esbuild": "^0.19.8",
     "esbuild-node-externals": "^1.11.0",
     "typescript": "^5.3.2"
