--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "author": "Jingo",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.21",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.1",
     "@types/nunjucks": "^3.2.6",
