--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.1",
     "@types/nunjucks": "^3.2.6",
+    "@types/xml2js": "^0.4.14",
     "esbuild": "^0.19.8",
     "esbuild-node-externals": "^1.11.0",
     "typescript": "^5.3.2"
@@ -35,6 +36,7 @@
     "lodash": "^4.17.21",
     "marked": "^11.0.0",
     "nunjucks": "^3.2.4",
+    "xml2js": "^0.6.2",
     "yaml": "^2.3.4"
   }
 }
