--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/inquirer": "^9.0.7",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.1",
     "@types/nunjucks": "^3.2.6",
@@ -34,6 +35,7 @@
     "dayjs": "^1.11.10",
     "express": "^4.18.2",
     "glob": "^10.3.10",
+    "inquirer": "^9.2.12",
     "lodash": "^4.17.21",
     "marked": "^11.0.0",
     "nunjucks": "^3.2.4",
