--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "huno",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "",
   "main": "src/huno.ts",
   "bin": {
-    "huno": "bin/huno.js"
+    "huno": "bin/huno.min.js"
   },
   "scripts": {
     "build": "tsc --noEmit && node build.js"
   },
   "files": [
-    "build",
-    "template"
+    "bin",
+    "template",
+    "starter"
   ],
   "keywords": [],
   "author": "Jingo",
