--- a/tsconfig.json
+++ b/tsconfig.json
@@ -70,5 +70,5 @@
     "skipLibCheck": true /* Skip type checking of declaration files. */,
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
-  "exclude": ["bin", "node_modules"]
+  "exclude": ["bin", "node_modules", "template"]
 }
