--- a/template/package.json
+++ b/template/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.10",
     "daisyui": "^4.4.20",
     "tailwindcss": "^3.3.6"
   }
