--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "huno",
-  "version": "1.3.3-0",
+  "version": "1.3.3",
   "description": "",
   "main": "bin/huno.min.ts",
   "bin": {
