--- a/starter/config/config.yaml
+++ b/starter/config/config.yaml
@@ -2,6 +2,6 @@ contentDir: 'content'
 outputDir: 'dist'
 publicDir: 'public'
 port: 8080
-category: 'category'
-series: 'series'
-tag: 'tag'
+category: 'Category'
+series: 'Series'
+tag: 'Tag'
