--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "huno": "bin/huno.min.js"
   },
   "scripts": {
-    "build": "tsc --noEmit && node build.js",
-    "build-style": "npx tailwindcss -i ./template/src/input.css -o ./template/assets/css/index.css --watch"
+    "build": "tsc --noEmit && node build.js"
   },
   "files": [
     "bin",
@@ -19,17 +18,14 @@
   "author": "Jingo",
   "license": "MIT",
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.10",
     "@types/express": "^4.17.21",
     "@types/inquirer": "^9.0.7",
     "@types/lodash": "^4.14.202",
     "@types/node": "^20.10.1",
     "@types/nunjucks": "^3.2.6",
     "@types/xml2js": "^0.4.14",
-    "daisyui": "^4.4.24",
     "esbuild": "^0.19.8",
     "esbuild-node-externals": "^1.11.0",
-    "tailwindcss": "^3.4.0",
     "typescript": "^5.3.2"
   },
   "dependencies": {
@@ -38,6 +34,7 @@
     "commander": "^11.1.0",
     "dayjs": "^1.11.10",
     "express": "^4.18.2",
+    "front-matter": "^4.0.2",
     "glob": "^10.3.10",
     "inquirer": "^9.2.12",
     "lodash": "^4.17.21",
