--- a/starter/config/config.yaml
+++ b/starter/config/config.yaml
@@ -3,13 +3,13 @@ publicDir: 'public'
 templateDir: 'template'
 templateName: 'default'
 partialsDir: 'partials'
-pluginsDir: 'plugins'
 outputDir: 'dist'
 port: 8080
 previewPort: 9000
 contentMap: false
 
-baseUrl: '/'
-title: 'Hello Huno'
-description: 'Welcome to Huno'
-author: 'Huno'
+baseVariables:
+  baseUrl: '/'
+  title: 'Hello Huno'
+  description: 'Welcome to Huno'
+  author: 'Huno'
